--- a/TecWeb/Views/Home/About.cshtml
+++ b/TecWeb/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TecWeb.Models.Pessoa>
 
 @{
-    ViewBag.Title = "Sobre";
+    ViewBag.Title = "Sobre nosso grupo.";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
