Atualizacao para Fundamentos de testes

--- a/TecWeb/Views/Pessoa/ObterTodos.cshtml
+++ b/TecWeb/Views/Pessoa/ObterTodos.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<TecWeb.Models.Pessoa>
 
 @{
-    ViewBag.Title = "Obter todas pessoas";
+    ViewBag.Title = "Lista de pessoas";
     ViewBag.Aviso = "Não há registros.";
 }
 
-<h2>Obter todas pessoas</h2>
+<h2>Lista de pessoas</h2>
 
 <p>
     @Html.ActionLink("Cadastrar pessoa", "Create")
